--- a/css/reset.css
+++ b/css/reset.css
@@ -3,6 +3,7 @@
 /* reset css */
 @import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css');
 
+
 @font-face {
   font-family: 'Nanum Gothic';
   font-style: normal;
@@ -25,7 +26,7 @@
 html,body{width:100%; height:100%;}
 html,body{font-size:13px; }/* 기본 폰트 크기 지정*/
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,form,fieldset,p,button,input,table{margin:0;padding:0; font-size:100%;}
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,form,fieldset,p,button,input,table{font-family: nanumgothic, Nanum Gothic, 나눔고딕, AppleSDGothicNeo, Helvetica, Arial, sans-serif !important; }
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,form,fieldset,p,button,input,table{font-family: nanumgothic, Nanum Gothic, AppleSDGothicNeo, Helvetica, Arial, sans-serif !important; }
 body{*word-break:break-all;-ms-word-break:break-all; -webkit-text-size-adjust:none;/*모바일 가로보기시 글씨 크기 확대 방지*/ }
 img,fieldset,iframe{border:0 none}
 li{list-style:none}
